--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.4",
     "react-wrap-balancer": "^0.3.0",
+    "shelljs": "^0.8.5",
     "typescript": "4.9.4",
     "use-debounce": "^9.0.3"
   },
@@ -44,6 +45,7 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
     "@types/ms": "^0.7.31",
+    "@types/shelljs": "^0.8.15",
     "autoprefixer": "^10.4.13",
     "concurrently": "^7.6.0",
     "postcss": "^8.4.21",
